--- a/LinkPredictionFeatherDeezerSocial.ipynb
+++ b/LinkPredictionFeatherDeezerSocial.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GdyMkZ9JebZF",
-        "outputId": "86695bcf-5910-4867-8116-b046276b8e46"
+        "outputId": "662706b7-aad0-4490-8315-eb5f59ac24bd"
       },
       "execution_count": 2,
       "outputs": [
@@ -61,7 +61,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ]
@@ -76,7 +76,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_cQNZEdelgWr",
-        "outputId": "e49de78d-ae69-4b01-8570-e6eca4693bf2"
+        "outputId": "4d919791-ca84-4e87-a3a4-7395a4456077"
       },
       "execution_count": 3,
       "outputs": [
@@ -147,9 +147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Iy29fbaUfSZb",
-        "outputId": "bcf0f5ca-dcca-4a57-d207-550a591f599a"
+        "outputId": "5d7f1428-b0ac-48c1-bb38-7fee976aaf4b"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "Q6yi6SVRlHjt"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "EJFSCEKQlh5I"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "MC-p8HC8qxyu"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "wSx5Zx-Iq-8z"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -270,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rygd9lf151kF",
-        "outputId": "7e4efa7d-d5d8-4a25-fee3-83766284d3d4"
+        "outputId": "e5850fb2-ab84-4441-b22b-2286d206f5d0"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,9 +311,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b7ddd63b-f629-4daf-9b72-f95f473121d3"
+        "outputId": "dd72936c-5fc6-4c5e-8083-7f1b6fcbb32d"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
